--- a/style.css
+++ b/style.css
@@ -1,157 +1,224 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-:root{
-    --green:#339933;
-    --lightgreen:#ccffcc;
-    --box-shadow: 0 0 10px rgba(0,0,0/15%);
-    --light-yellow:#e0ffcd;
+:root {
+  --green: #339933;
+  --lightgreen: #ccffcc;
+  --box-shadow: 0 0 10px rgba(0, 0, 0/15%);
+  --light-yellow: #e0ffcd;
+}
+html {
+  font-size: 16px;
+  -ms-scrollbar: scrollbar;
+  -webkit-tap-highlight-color: transparent;
+  font-family: sans-serif;
+  --ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+body {
+  background-image: url("./images/image1.jpg");
+  width: 100%;
+}
+.main {
+  width: 85vw;
+  background: #fff;
+  box-shadow: 0 2px 6px 0 rgba(0 0 0/10%);
+  margin: 1rem auto;
+  margin-top: 10rem;
+  padding: 2%;
+}
+a {
+  text-decoration: none;
+}
+.title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin: 1rem 0;
+  line-height: 2;
+}
+.title p {
+  text-transform: capitalize;
+}
+ul {
+  list-style: none;
+}
+sup {
+  position: absolute;
+  top: 15%;
+  background: #000;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  line-height: 15px;
+  text-align: center;
+  padding: 0.1rem;
+}
+.empty {
+  text-align: center;
+  text-transform: capitalize;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  width: 59%;
+  padding: 0.5rem 1.5rem;
+  border-radius: 5px;
+  background: var(--lightgreen);
+  color: var(--green);
+  border: 1px solid var(--green);
+}
+.btn {
+  line-height: 2;
+  background-color: var(--light-yellow);
+  padding: 5px 35px;
+  display: inline-block;
+  border-radius: 30px;
+  color: #000;
+  text-transform: capitalize;
+  font-family: inherit;
+  font-size: 16px;
+  cursor: pointer;
+  user-select: none;
+  position: relative;
+  overflow: hidden;
+  vertical-align: middle;
+  transition: color 0.3s ease;
+  z-index: 2;
+}
+.btn::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  background-color: var(--green);
+  height: 100%;
+  width: 0;
+  z-index: -1;
+  transition: width 0.3s ease;
+}
+.btn:hover::before {
+  width: 100%;
+}
+label {
+  text-transform: capitalize;
+}
+input,
+textarea {
+  background-color: white;
+  border: none;
+  outline: none;
+  padding: 0.3s;
+  box-shadow: var(--box-shadow);
+  margin: 0.5rem 0;
+  border: 1px solid var(--green);
+  width: 100%;
+}
+button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.banner {
+  background: url("/images/image1.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 50vh;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.banner h1 {
+  text-transform: uppercase;
+  color: #fff;
+  margin-left: 3rem;
+}
+.title2 {
+  border-top: 1px solid var(--green);
+  padding: 1rem 2rem;
+  text-transform: uppercase;
+  box-shadow: var(--box-shadow);
+}
+.title2 a {
+  color: var(--green);
+}
 
+/* header css */
+header {
+  position: fixed;
+  top: 5%;
+  left: 7%;
+  width: 85vw;
+  padding: 1rem;
+  z-index: 101;
+  transition: 0.3s;
+  box-shadow: var(--box-shadow);
+  background-image: url("./images/image1.jpg") no-repeat;
 }
-html{
-font-size: 16px;
-    -ms-scrollbar:scrollbar;;
-    -webkit-tap-highlight-color: transparent;
-    font-family: sans-serif;
-    --ms-text-size-adjust:100%;
-    -webkit-text-size-adjust: 100%;
-
+header.scrolled {
+  top: 0;
+  box-shadow: 0 5 20px 0.1px rgba(0, 0, 0, 0.1);
 }
-body{
-    background-image: url('./images/image1.jpg');
-    width:100%;
+.header.scroiled a:hover {
+  color: var(--green);
+  display: flex;
+  justify-content: center;
+  align-items: space-between;
+  position: relative;
+  margin: 0 auto;
 }
-.main{
-    width:85vw;
-    background:#fff;
-    box-shadow: 0 2px 6px 0 rgba(0 0 0/10%);
-    margin:1rem auto;
-    margin-top: 10rem;
-    padding:2%;
+.navbar a {
+  margin: 0 1rem;
+  font-size: 1rem;
+  color: #000;
+  text-transform: uppercase;
 }
-a{
-    text-decoration: none;
+.navbar a:hover {
+  color: var(--green);
 }
-.title{
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 1rem;
-    margin:1rem 0;
-    line-height: 2;
-    
+.header .icons {
+  display: flex;
 }
-.title p{
-    text-transform: capitalize;
-
+.header .icons i {
+  margin-left: 1rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #000 !important;
 }
-ul{
-    list-style: none;
+#menu-item {
+  display: none;
 }
-sup{
-    position: absolute;
-    top:15%;
-    background: #000;
-    border-radius: 50%;
-    height: 20px;
-    width:20px;
-    line-height: 15px;
-    text-align: center;
-    padding: .1rem;
+.header .user-box {
+  position: absolute;
+  top: 120%;
+  right: 0;
+  box-shadow: rgb(255, 255, 255/80%);
+  box-shadow: var(--box-shadow);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  text-align: center;
+  width: 20rem;
+  transform: scale(0);
+  transform-origin: top right;
+  line-height: 2;
 }
-.empty{
-    text-align: center;
-    text-transform: capitalize;
-    margin: 0 auto;
-    margin-bottom: 2rem;
-    width: 59%;
-    padding: .5rem 1.5rem;
-    border-radius: 5px;
-    background:var(--lightgreen);
-    color: var(--green);
-    border: 1px solid var(--green);
-
+.header .user-box .btn {
+  border-radius: 0.5rem;
+  padding: 0 1.5rem;
 }
-.btn{
-    line-height: 2;
-    background-color: var(--light-yellow);
-    padding: 5px 35px;
-    display: inline-block;
-    border-radius: 30px;
-    color:#000;
-    text-transform: capitalize;
-    font-family: inherit;
-    font-size: 16px;
-    cursor:pointer;
-    user-select:none;
-    position: relative;
-    overflow:hidden;
-    vertical-align: middle;
-    transition: color .3s ease;
-    z-index:2;
+.logout-btn {
+  background: #000;
+  color: #fff;
+  text-transform: uppercase;
+  width: 11rem;
+  border-radius: 0.5rem;
+  margin: 0.5rem 0;
+  padding: 0.5rem 0;
 }
-.btn::before{
-    position: absolute;
-    content: '';
-    left: 0;
-    top: 0;
-    background-color: var(--green);
-    height:100%;
-    width:0;
-    z-index: -1;
-    transition: width .3s ease;
-    
-}
-.btn:hover::before{
-    width:100%;
-
-}
-label{
-    text-transform: capitalize;
-}
-input,textarea{
-    background-color: white;
-    border:none;
-    outline:none;
-    padding: .3s;
-    box-shadow:var(--box-shadow);
-    margin:.5rem 0;
-    border:1px solid var(--green);
-    width: 100%;
-
-}
-button{
-    background-color: transparent;
-    border:none;
-    outline: none;
-    cursor: pointer;
-
-}
-.banner{
-    background: url('/images/image1.jpg');
-    background-size: cover;
-    background-position: center;
-    width:100%;
-    height:50vh;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-.banner h1{
-    text-transform: uppercase;
-    color:#fff;
-    margin-left:3rem;
-
-}
-.title2{
-    border-top: 1px solid var(--green);
-    padding:1rem 2rem;
-    text-transform: uppercase;
-    box-shadow: var(--box-shadow);
-}
-.title2 a{
-    color:var(--green)
+.header .user-box.active {
+  transform: scale(1);
+  transition: 0.2s linear;
 }
