--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
-  background-image: url("./images/image1.jpg");
+  /* background-image: url("./images/image1.jpg"); */
   width: 100%;
 }
 .main {
@@ -48,7 +48,7 @@ ul {
 sup {
   position: absolute;
   top: 15%;
-  background: #000;
+  background: var(--lightgreen);
   border-radius: 50%;
   height: 20px;
   width: 20px;
@@ -121,7 +121,7 @@ button {
   cursor: pointer;
 }
 .banner {
-  background: url("/images/image1.jpg") no-repeat;
+  /* background: url("/images/image1.jpg") no-repeat; */
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -158,6 +158,14 @@ header {
   box-shadow: var(--box-shadow);
   background-image: url("./images/image1.jpg") no-repeat;
 }
+.flex{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  margin: 0 auto;
+}
 header.scrolled {
   top: 0;
   box-shadow: 0 5 20px 0.1px rgba(0, 0, 0, 0.1);
@@ -188,7 +196,7 @@ header.scrolled {
   cursor: pointer;
   color: #000 !important;
 }
-#menu-item {
+#menu-btn {
   display: none;
 }
 .header .user-box {
@@ -221,4 +229,39 @@ header.scrolled {
 .header .user-box.active {
   transform: scale(1);
   transition: 0.2s linear;
+}
+
+/* -------------------media scrieen */
+
+@media (max-width: 991px) {
+  #menu-btn {
+    display: block;
+  }
+  .heaader .flex .navbar {
+    position: absolute;
+    width: 100%;
+    padding: 0 2rem;
+    top: 130%;
+    left: 0;
+    display: block;
+    right: 0;
+    border-top: 1px solid var(--green);
+    background-color: #fff;
+    transition: 0.3s ease;
+    clip-path: polygon(0, 0, 100%, 0 100%, 0 0);
+  }
+  .header .flex .navbar.active {
+    clip-path: polygon(0, 0, 100%, 0 100%, 0 100%);
+  }
+  .header .flex .navbar a {
+    display: block;
+    margin: 2rem;
+    border-top: 1px solid var(--green);
+  }
+  .form-container {
+    width: 100%;
+  }
+  form {
+    width: 100%;
+  }
 }
