--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 /* main styling================= */
 .main {
@@ -247,7 +248,7 @@ header.scrolled {
 .slider {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  max-width: 80vh;
+  max-height: 80vh;
   width: 100%;
   display: flex;
   overflow-x: hidden;
@@ -381,6 +382,7 @@ header.scrolled {
   padding-bottom: 1rem;
   color: gray;
 }
+
 .thumb .box-container .box img {
   transition: all 800ms ease-in-out;
   width: 70px;
@@ -706,6 +708,11 @@ about page
 .form-container{
   width: 50vw;
   margin: 0 auto;
+}
+.form-container input{
+  height: 40px;
+  border-radius: 20px;
+  font-size: 17px;
 }
 .form-container input, textarea{
   background-color: transparent;
