--- a/style.css
+++ b/style.css
@@ -362,7 +362,6 @@ header.scrolled {
 }
 /* ----------home section slider ending */
 
-
 /* thumbnail image */
 .thumb {
   max-width: 1200px;
@@ -412,8 +411,6 @@ header.scrolled {
 }
 /* thumbnail image enidng*/
 
-
-
 /* box image with products */
 .container .box {
   text-align: center;
@@ -456,8 +453,6 @@ header.scrolled {
   margin: 0 0 0 13px;
 }
 /* sbop css ending*/
-
-
 
 /*--------------------- shop category css */
 .shop-category .box {
@@ -578,7 +573,6 @@ footer .bottom-footer {
 }
 /* --------------------footer section css ending */
 
-
 /* -------------------media scrieen */
 
 @media (max-width: 991px) {
@@ -638,141 +632,140 @@ about page
 
 
 */
-.banner{
- background-color: var(--light-yellow);
+.banner {
+  background-color: var(--light-yellow);
 }
-.about-category{
+.about-category {
   max-width: 1200px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
   margin: 2rem auto;
-  
 }
-.about-category .box{
+.about-category .box {
   position: relative;
   margin: 1rem;
   box-shadow: 1px 2px 11px var(--green);
 }
-.about-category .box img{
+.about-category .box img {
   width: 60%;
 }
-.about-category .box:nth-child(2) img{
+.about-category .box:nth-child(2) img {
   width: 75%;
 }
-.about-category .box .detail{
+.about-category .box .detail {
   position: absolute;
-  top:30%;
+  top: 30%;
   right: 10%;
 }
-.about-category .box .detail h1{
+.about-category .box .detail h1 {
   margin-bottom: 1.5rem;
 }
-.about-category .box .detail span{
+.about-category .box .detail span {
   text-transform: uppercase;
   font-size: 20px;
   color: #555;
 }
-.about-category .box .detail .btn{
+.about-category .box .detail .btn {
   opacity: 0.6;
 }
-.about .row{
+.about .row {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
-.about .row .detail p{
+.about .row .detail p {
   margin-bottom: 2rem;
 }
-.about .row .img-box{
+.about .row .img-box {
   width: 50%;
 }
 
-.about .row .detail h1{
+.about .row .detail h1 {
   text-align: center;
   margin: 1rem 0;
 }
 
-.main-container{
+.main-container {
   background-color: #fff;
   width: 60vw;
-  min-width:80vh;
+  min-width: 80vh;
   box-shadow: var(--box-shadow);
   display: flex;
   align-items: center;
   justify-content: center;
-  margin:2rem auto;
+  margin: 2rem auto;
   padding: 1rem 0;
 }
 
-.form-container{
+.form-container {
   width: 50vw;
   margin: 0 auto;
 }
-.form-container input{
+.form-container input {
   height: 40px;
   border-radius: 20px;
   font-size: 17px;
 }
-.form-container input, textarea{
+.form-container input,
+textarea {
   background-color: transparent;
 }
-.main-container p{
-  color:var(--green)
+.main-container p {
+  color: var(--green);
 }
-.form-container sup{
+.form-container sup {
   color: red;
 }
-.main-container input[type=submit]{
+.main-container input[type="submit"] {
   color: 0 !important;
   cursor: pointer;
 }
-.form-container form{
+.form-container form {
   margin: 1rem auto;
-  background-color: rgb(255,255,255/80%);
+  background-color: rgb(255, 255, 255/80%);
   box-shadow: var(--box-shadow);
   padding: 2rem;
   position: relative;
   border-radius: 5px;
 }
-.form-container form p{
-
+.form-container form p {
   text-transform: uppercase;
 }
-.form-container .form input{
+.form-container .form input {
   width: 85%;
   border-radius: 10px;
 }
-.form-container .title img{
+.form-container .title img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   box-shadow: 4px 6px 9px var(--green);
 }
 
-.address{
-  background-image: url('./images/image3.jpg');
+.address {
+  background-image: url("./images/image3.jpg");
   padding: 4rem 0;
-  min-height:50vh;
+  min-height: 50vh;
   color: #fff;
 }
 .address .box-container {
   justify-content: center;
   align-items: center;
 }
-.address .box-container .box{
-  display: flex;justify-content: center;
+.address .box-container .box {
+  display: flex;
+  justify-content: center;
   align-items: center;
-  margin:1rem;
+  margin: 1rem;
   box-shadow: var(--box-shadow);
   line-height: 2;
   padding: 1rem 0;
 }
-.address .box-container .box h4{
+.address .box-container .box h4 {
   text-transform: uppercase;
   color: var(--green);
 }
-.address .box-container .box i{
+.address .box-container .box i {
   font-size: 1.5rem;
   margin-right: 1rem;
   width: 80px;
@@ -783,4 +776,108 @@ about page
   align-items: center;
   background-color: var(--green);
   color: #fff;
+}
+
+/* view products css    */
+.products .box-container {
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  justify-content: center;
+}
+.products .box-container .box {
+  box-shadow: var(--box-shadow);
+  border-radius: 0.5rem;
+  padding: 2rem 1rem;
+  margin: 1rem;
+  position: relative;
+  border: 2px solid var(--lightgreen);
+}
+.products .box-container .box img {
+  width: 80%;
+  height: auto;
+}
+.products .box-container .box .name {
+  font-size: 1.2rem;
+  color: #555;
+  text-transform: capitalize;
+}
+.products .box-container .box .button {
+  text-align: center;
+  position: absolute;
+  bottom: 30px;
+  right: 7%;
+  border-radius: 20px;
+  background: var(--lightgreen);
+  padding: 0.5rem 1.5rem;
+}
+.products .box-container .box .button i,
+.products .box-container .box .button a {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-left: 0.5rem;
+  color: black;
+}
+
+.products .box-container .box .flex{
+  display: flex;
+  margin-bottom: 1rem;
+  margin-right: auto;
+}
+
+.products .box-container .box .price{
+  font-size: 1.1rem;
+  color:var(--green);
+  margin-right: auto;
+  
+}
+.products .box-container .box .btn{
+  position: absolute;
+  top: 5%;
+
+}
+.products .box-container .box .flex .qty{
+  border-radius:.5rem;
+  padding: .5rem 1rem;
+  width:4.5rem;
+  font-size: 1.1rem;
+  color: #000;
+}
+.products .box-container .box .flex .fa-edit{
+  border-radius: .5rem;
+  font-size: 1.7rem;
+  color: white;
+  height: 3.5rem;
+  width: 4.5rem;
+  cursor: pointer;
+}
+.products .box-container .box .flex .fa-edit:hover{
+  background-color: var(--lightgreen);
+}
+.products .box-container .box .sub-total{
+  padding-bottom:1rem;
+  font-size: 1.7rem;
+  color: gray;
+}
+.products .box-container .box .sub-total span{
+  color: red;
+}
+.products .box-container .box .button{
+  align-items: center;
+}
+.products .cart-total{
+  box-shadow: var(--box-shadow);
+  border-radius: .5rem;
+  max-width: 50vw;
+  margin: 1rem auto;
+  text-align:center;
+  padding: 2rem;
+}
+
+.products .cart-total p{
+  padding-bottom: 1rem;
+  font-size: 2rem;
+  color:#555;
+  text-transform: capitalize;
+}
+.products .cart-total p span{
+  color: var(--green);
 }
