--- a/style.css
+++ b/style.css
@@ -879,3 +879,51 @@ textarea {
 .products .cart-total p span {
   color: var(--green);
 }
+
+/* each products viewing css */
+
+.view_page {
+  padding: 5% 8%;
+  background-image: url("images/image1.jpg");
+}
+.view_page form {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  justify-content: center;
+  align-items: center;
+  box-shadow: var(--box-shadow);
+  background-color: white;
+  margin-left: 1rem;
+  padding: 1.5rem;
+}
+.view_page form img {
+  padding: 0.5rem;
+  box-shadow: var(--box-shadow);
+}
+.view_page form .name {
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: var(--green);
+}
+.view_page form .price {
+  font-size: 24px;
+  line-height: 1;
+}
+.view-page .form .detail {
+  font-size: 16px;
+  color: gray;
+  line-height: 2;
+  margin-bottom: 0.5rem;
+}
+.view-page .btn {
+  background-color: var(--lightgreen);
+  cursor: pointer;
+}
+.cart-total .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cart-total .button .btn {
+  margin: 1rem;
+}
